<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Home" >

           <EditText
            android:id="@+id/edit_location1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="72dp"
            android:ems="10"
            android:hint="@string/edit_location1" />

        <EditText
            android:id="@+id/edit_location4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/edit_location3"
            android:layout_marginTop="35dp"
            android:ems="10"
            android:hint="@string/edit_location4" />

        <Button
            android:id="@+id/setLocation1"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/edit_location1"
            android:layout_alignLeft="@+id/setLocation2"
            android:onClick="setLocation1"
            android:text="@string/set_location1" />

        <EditText
            android:id="@+id/edit_location3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/edit_location2"
            android:layout_marginTop="36dp"
            android:ems="10"
            android:hint="@string/edit_location3" />

        <Button
            android:id="@+id/setLocation2"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/edit_location2"
            android:layout_marginLeft="17dp"
            android:layout_toRightOf="@+id/edit_location2"
            android:onClick="setLocation2"
            android:text="@string/set_location2" />

        <Button
            android:id="@+id/setLocation3"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/edit_location3"
            android:layout_alignLeft="@+id/setLocation2"
            android:onClick="setLocation3"
            android:text="@string/set_location3" />

        <Button
            android:id="@+id/setLocation4"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/edit_location4"
            android:layout_alignLeft="@+id/setLocation3"
            android:onClick="setLocation4"
            android:text="@string/set_location4" />

        <Button
            android:id="@+id/setlocation5"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/edit_location5"
            android:layout_alignLeft="@+id/setLocation4"
            android:onClick="setLocation5"
            android:text="@string/set_location5" />

        <EditText
            android:id="@+id/edit_location5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/edit_location4"
            android:layout_marginTop="41dp"
            android:ems="10"
            android:hint="@string/edit_location5" >

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/edit_location2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/edit_location1"
            android:layout_marginTop="34dp"
            android:ems="10"
            android:hint="@string/edit_location2" />

  
        

</RelativeLayout>
