<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Location3" >

   <ScrollView
                        android:id="@+id/scroll_id"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:fillViewport="true"
                        android:scrollbars="vertical"
                        tools:ignore="UselessParent" >

                        <LinearLayout
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical" >

                            <TextView
                                android:id="@+id/Location3_view"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:hint="@string/textview_location1"
                                android:textAppearance="?android:attr/textAppearanceMedium" />

                            <EditText
                                android:id="@+id/editText1"
                                android:layout_width="85dp"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="5dp"
                                android:ems="10"
                                android:hint="@string/mto_number"
                                android:inputType="number" >

                                <requestFocus />
                            </EditText>

                            <AutoCompleteTextView
                                android:id="@+id/cite7"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="5dp"
                                android:ems="10"
                                android:hint="@string/cite" />

                            <AutoCompleteTextView
                                android:id="@+id/autoCompleteTextView2"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="5dp"
                                android:ems="10"
                                android:hint="@string/yard" />

                            <AutoCompleteTextView
                                android:id="@+id/Tracks"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="5dp"
                                android:ems="10"
                                android:hint="@string/track_location" />

                            <AutoCompleteTextView
                                android:id="@+id/station"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="5dp"
                                android:ems="10"
                                android:hint="@string/station" />

                            <AutoCompleteTextView
                                android:id="@+id/autoCompleteTextView5"
                                android:layout_width="108dp"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="5dp"
                                android:ems="10"
                                android:hint="@string/state_location" />

                            <EditText
                                android:id="@+id/createdBy"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="15dp"
                                android:ems="10"
                                android:hint="@string/createdBy" />

                            <EditText
                                android:id="@+id/editText2"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="5dp"
                                android:ems="10"
                                android:hint="@string/another_hint" />

                            <TextView
                                android:id="@+id/Questions"
                                android:layout_width="172dp"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="25dp"
                                android:text="@string/question1"
                                android:textAppearance="?android:attr/textAppearanceMedium" />

                            <TextView
                                android:id="@+id/question1_location3"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:hint="@string/question_locations" />
                        </LinearLayout>
                    </ScrollView>
</RelativeLayout>
